// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/components/pages/users/ClearStatus.vue snapshot test renders correctly 1`] = `
Array [
  Object {
    "props": Object {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
  Object {
    "props": Object {
      "value": "left",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "textAlign",
  },
  Object {
    "props": Object {
      "value": "middle",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "textBaseline",
  },
  Object {
    "props": Object {
      "text": "NoPlay",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  Object {
    "props": Object {
      "text": "Failed",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  Object {
    "props": Object {
      "text": "Assisted Clear",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  Object {
    "props": Object {
      "text": "Clear",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  Object {
    "props": Object {
      "text": "Life 4",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  Object {
    "props": Object {
      "text": "Full Combo",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  Object {
    "props": Object {
      "text": "Great Full Combo",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  Object {
    "props": Object {
      "text": "Perfect Full Combo",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  Object {
    "props": Object {
      "text": "Marvelous Full Combo",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
]
`;

exports[`/components/pages/users/ClearStatus.vue snapshot test renders empty 1`] = `
Array [
  Object {
    "props": Object {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
  Object {
    "props": Object {
      "value": "left",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "textAlign",
  },
  Object {
    "props": Object {
      "value": "middle",
    },
    "transform": Array [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "textBaseline",
  },
]
`;
